# gdtf-rs

./: .gitignore  Cargo.toml  Generic@RGBW8@test.gdtf  LICENSE  README.md
.github/workflows/: check.yml
src/: lib.rs  resource.rs  result.rs  validation.rs
src/description/: attribute.rs  collect_helper.rs  dmx_mode.rs  fixture_type.rs  ft_preset.rs  geometry.rs  mod.rs  model.rs  parse_helper.rs  physical_descriptions.rs  protocol.rs  revision.rs  util.rs  values.rs  wheel.rs
